syntax = "proto3";

package designations;

option go_package = "api/designationpb;designationpb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

// Designation entity
message Designation {
  string id = 1;
  string name = 2;
  string description = 3;
  string slug = 4;
  bool is_active = 5;
  string parent_id = 6; // For hierarchical designations
  int32 level = 7; // Hierarchy level (0 = top level)
  int32 user_count = 8; // Number of users with this designation
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// ========== Request/Response Messages ==========

// Create Designation
message CreateDesignationRequest {
  string name = 1;
  string description = 2;
  bool is_active = 3;
  string parent_id = 4; // Optional parent designation
}

message DesignationResponse {
  Designation designation = 1;
}

// Get Designation
message GetDesignationRequest {
  string id = 1;
}

// Update Designation
message UpdateDesignationRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  bool is_active = 4;
  string parent_id = 5;
}

// Delete Designation
message DeleteDesignationRequest {
  string id = 1;
  bool force = 2; // Force delete even if users assigned (reassign to parent or null)
}

message DeleteDesignationResponse {
  bool success = 1;
  string message = 2;
}

// List Designations
message ListDesignationsRequest {
  int32 page = 1;
  int32 page_size = 2;
  bool active_only = 3; // Filter only active designations
  string parent_id = 4; // Filter by parent (empty = root level)
  string search = 5; // Search by name or description
}

message ListDesignationsResponse {
  repeated Designation designations = 1;
  int64 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

// Get Designation by Slug
message GetDesignationBySlugRequest {
  string slug = 1;
}

// Get Designation Hierarchy (parent and children)
message GetDesignationHierarchyRequest {
  string id = 1;
}

message DesignationHierarchy {
  Designation designation = 1;
  Designation parent = 2;
  repeated Designation children = 3;
}

message GetDesignationHierarchyResponse {
  DesignationHierarchy hierarchy = 1;
}

// Activate/Deactivate Designation
message ToggleDesignationStatusRequest {
  string id = 1;
  bool is_active = 2;
}

// Check if designation name exists
message CheckDesignationExistsRequest {
  string name = 1;
  string exclude_id = 2; // Exclude this ID from check (for updates)
}

message CheckDesignationExistsResponse {
  bool exists = 1;
  string existing_id = 2;
}

// Get users count by designation
message GetUsersCountRequest {
  string designation_id = 1;
}

message GetUsersCountResponse {
  int32 count = 1;
}

// ========== Service ==========

service DesignationService {
  // Create a new designation
  rpc CreateDesignation(CreateDesignationRequest) returns (DesignationResponse) {
    option (google.api.http) = {
      post: "/api/v1/designations"
      body: "*"
    };
  }
  
  // Get designation by ID
  rpc GetDesignation(GetDesignationRequest) returns (DesignationResponse) {
    option (google.api.http) = {
      get: "/api/v1/designations/{id}"
    };
  }
  
  // Get designation by slug
  rpc GetDesignationBySlug(GetDesignationBySlugRequest) returns (DesignationResponse) {
    option (google.api.http) = {
      get: "/api/v1/designations/slug/{slug}"
    };
  }
  
  // Update designation
  rpc UpdateDesignation(UpdateDesignationRequest) returns (DesignationResponse) {
    option (google.api.http) = {
      put: "/api/v1/designations/{id}"
      body: "*"
    };
  }
  
  // Delete designation
  rpc DeleteDesignation(DeleteDesignationRequest) returns (DeleteDesignationResponse) {
    option (google.api.http) = {
      delete: "/api/v1/designations/{id}"
    };
  }
  
  // List designations with pagination and filters
  rpc ListDesignations(ListDesignationsRequest) returns (ListDesignationsResponse) {
    option (google.api.http) = {
      get: "/api/v1/designations"
    };
  }
  
  // Get designation hierarchy (parent and children)
  rpc GetDesignationHierarchy(GetDesignationHierarchyRequest) returns (GetDesignationHierarchyResponse) {
    option (google.api.http) = {
      get: "/api/v1/designations/{id}/hierarchy"
    };
  }
  
  // Toggle designation active status
  rpc ToggleDesignationStatus(ToggleDesignationStatusRequest) returns (DesignationResponse) {
    option (google.api.http) = {
      patch: "/api/v1/designations/{id}/status"
      body: "*"
    };
  }
  
  // Check if designation name exists
  rpc CheckDesignationExists(CheckDesignationExistsRequest) returns (CheckDesignationExistsResponse) {
    option (google.api.http) = {
      post: "/api/v1/designations/check-exists"
      body: "*"
    };
  }
  
  // Get users count for a designation
  rpc GetUsersCount(GetUsersCountRequest) returns (GetUsersCountResponse) {
    option (google.api.http) = {
      get: "/api/v1/designations/{designation_id}/users-count"
    };
  }
}
